--- a/requirements.txt
+++ b/requirements.txt
@@ -6,26 +6,66 @@
 #
 altgraph==0.17.2
     # via pyinstaller
-colorama==0.4.4
-    # via tqdm
-exif==1.3.5
+asttokens==2.0.5
+    # via stack-data
+autopep8==1.6.0
     # via -r requirements.in
+backcall==0.2.0
+    # via ipython
+colorama==0.4.4
+    # via
+    #   ipython
+    #   tqdm
+decorator==5.1.1
+    # via ipython
+executing==0.8.3
+    # via stack-data
 future==0.18.2
     # via pefile
+ipython==8.2.0
+    # via -r requirements.in
+jedi==0.18.1
+    # via ipython
+matplotlib-inline==0.1.3
+    # via ipython
+parso==0.8.3
+    # via jedi
 pefile==2021.9.3
     # via pyinstaller
+pickleshare==0.7.5
+    # via ipython
 pillow==9.1.0
     # via -r requirements.in
-plum-py==0.7.9
-    # via exif
+prompt-toolkit==3.0.29
+    # via ipython
+pure-eval==0.2.2
+    # via stack-data
+pycodestyle==2.8.0
+    # via autopep8
+pygments==2.11.2
+    # via ipython
 pyinstaller==5.0
     # via -r requirements.in
 pyinstaller-hooks-contrib==2022.4
     # via pyinstaller
+python-dateutil==2.8.2
+    # via -r requirements.in
 pywin32-ctypes==0.2.0
     # via pyinstaller
+six==1.16.0
+    # via python-dateutil
+stack-data==0.2.0
+    # via ipython
+toml==0.10.2
+    # via autopep8
 tqdm==4.64.0
     # via -r requirements.in
+traitlets==5.1.1
+    # via
+    #   ipython
+    #   matplotlib-inline
+wcwidth==0.2.5
+    # via prompt-toolkit
 win32-setctime==1.1.0
     # via -r requirements.in
 
